[package]
name = "bobby_bot"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/bobby_bot"
repository = "https://github.com/celeo/bobby_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
