[package]
name = "bobby_bot"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/bobby_bot"
repository = "https://github.com/celeo/bobby_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
dotenv = "0.15.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
